--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
 
     <!-- 1. ENCABEZADO FIJO -->
     <header class="fixed top-0 left-0 w-full bg-medical-primary text-white h-16 flex items-center px-4 shadow-md z-50 justify-between">
-        <div class="flex items-center gap-3">
-            <div class="bg-white/10 p-1.5 rounded text-white">
-                <i class="ph ph-first-aid text-2xl"></i>
-            </div>
+ <div class="flex items-center">
+    <img src="https://images.seeklogo.com/logo-png/46/2/ministerio-de-salud-de-la-nacion-argentina-logo-png_seeklogo-460871.png" 
+         alt="Logo Salud" 
+        class="h-40 w-auto object-contain">
+</div>
             <div>
                 <h1 class="text-sm font-bold leading-tight uppercase tracking-wide">SISTEMA DE SALUD DIGITAL NACIONAL C.U.R.A.</h1>
                 <p class="text-[10px] opacity-80 font-medium tracking-wider">NIVEL DE ACCESO 2 (URGENCIAS)</p>
