--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- 1. ENCABEZADO FIJO -->
     <header class="fixed top-0 left-0 w-full bg-medical-primary text-white h-16 flex items-center px-4 shadow-md z-50 justify-between">
  <div class="flex items-center">
-    <img src="https://images.seeklogo.com/logo-png/46/2/ministerio-de-salud-de-la-nacion-argentina-logo-png_seeklogo-460871.png" 
+    <img src="/main/logo_cura.png" 
          alt="Logo Salud" 
         class="h-40 w-auto object-contain">
 </div>
