--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="leading-tight">
           <p class="text-[11px] uppercase tracking-[0.25em] text-cura-accentLight">LEY NACIONAL</p>
-          <p class="text-sm font-bold text-white">Credencial Única para la Salud Argentina</p>
+          <p class="text-sm font-bold text-white">Transformación Digital Sanitaria Argentina</p>
         </div>
       </div>
 
@@ -108,7 +108,7 @@
             SISTEMA C.U.R.A.
           </p>
           <p class="text-sm text-white">
-            Una credencial digital única para cada ciudadano, interoperable entre todos los subsectores de salud, permitiendo que la información crítica esté disponible donde y cuando se la necesita.
+            Una credencial digital única para cada ciudadano, interoperable entre todos los subsectores de salud, permitiendo que la información esté siempre disponible donde y cuando se la necesita. Es la unificación Nacional de la Historia Clinica, no más papeles, estudios repetidos, toda tu información médica en un sólo lugar. 
           </p>
           <ul class="text-sm text-cura-accentLight space-y-1">
             <li>• Acceso seguro y segmentado para pacientes, enfermería y médicos.</li>
@@ -273,3 +273,4 @@
 
 </body>
 </html>
+
