--- a/index.html
+++ b/index.html
@@ -108,12 +108,13 @@
             SISTEMA C.U.R.A.
           </p>
           <p class="text-sm text-white">
-            Una credencial digital única para cada ciudadano, interoperable entre todos los subsectores de salud, permitiendo que la información esté siempre disponible donde y cuando se la necesita. Es la unificación Nacional de la Historia Clinica, no más papeles, estudios repetidos, toda tu información médica en un sólo lugar. 
+            Una credencial digital única para cada ciudadano, interoperable entre todos los subsectores de salud, permitiendo que la información esté siempre disponible donde y cuando se la necesite. Es la unificación Nacional de la Historia Clinica, no más papeles ni estudios repetidos, toda tu información médica en un sólo lugar. 
           </p>
           <ul class="text-sm text-cura-accentLight space-y-1">
             <li>• Acceso seguro y segmentado para pacientes, enfermería y médicos.</li>
             <li>• Integración con historias clínicas electrónicas y receta digital.</li>
             <li>• Alineada a estándares internacionales de interoperabilidad.</li>
+            <li>• Reforma del PAMI: Llega la mejora necesaria para que todos sus pacientes dejen de sufrir la burocracia y sea todo mucho más ágil y fácil, sin demoras. Traslados automaticos en turnos para personas con movilidad reducida.</li>
           </ul>
           <div class="pt-2 border-t border-cura-accent/30 flex items-center justify-between">
             <span class="text-[11px] text-cura-accentLight">Proyecto ciudadano, sin fines de lucro.</span>
@@ -273,4 +274,5 @@
 
 </body>
 </html>
+
 
