--- a/index.html
+++ b/index.html
@@ -42,11 +42,10 @@
   <header class="sticky top-0 z-30 bg-cura-primaryDark text-white border-b border-cura-accent/40 shadow-sm">
     <div class="max-w-5xl mx-auto px-4 py-3 flex items-center justify-between gap-4">
       <!-- Logo / Marca -->
-      <div class="flex items-center gap-2">
-        <!-- Podés reemplazar el círculo por un <img> con tu isotipo -->
-        <div class="w-9 h-9 rounded-full bg-cura-accent flex items-center justify-center text-cura-primary font-extrabold text-xs">
-          C.U.R.A.
-        </div>
+<img src="/logo.png" 
+     alt="Logo C.U.R.A." 
+     class="w-9 h-9 object-contain" />
+
         <div class="leading-tight">
           <p class="text-[11px] uppercase tracking-[0.25em] text-cura-accentLight">LEY NACIONAL</p>
           <p class="text-sm font-bold text-white">Transformación Digital Sanitaria Argentina</p>
