--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="favicon.png" />
   <title>Ley C.U.R.A. | Diseñando el futuro de la Salud Pública Argentina</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -273,5 +274,6 @@
 
 </body>
 </html>
+
 
 
