--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
   <header class="sticky top-0 z-30 bg-cura-primaryDark text-white border-b border-cura-accent/40 shadow-sm">
     <div class="max-w-5xl mx-auto px-4 py-3 flex items-center justify-between gap-4">
       <!-- Logo / Marca -->
-<img src="logo.png"
+<img src="/logo.png"
      alt="Logo C.U.R.A."
      class="w-9 h-9 object-contain shrink-0" />
+
 
 
         <div class="leading-tight">
@@ -275,6 +276,7 @@
 
 </body>
 </html>
+
 
 
 
