--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
       <!-- Logo / Marca -->
 <img src="/logo.png"
      alt="Logo C.U.R.A."
-     class="w-9 h-9 object-contain shrink-0" />
+     class="h-12 w-auto object-contain shrink-0" />
+
 
 
 
@@ -276,6 +277,7 @@
 
 </body>
 </html>
+
 
 
 
