--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
       <!-- Logo / Marca -->
 <img src="/logo.png"
      alt="Logo C.U.R.A."
-     class="h-12 w-auto object-contain shrink-0" />
-
+     class="w-9 h-9 object-contain shrink-0" />
 
 
 
@@ -277,6 +276,7 @@
 
 </body>
 </html>
+
 
 
 
