--- a/index.html
+++ b/index.html
@@ -40,33 +40,35 @@
   </div>
 
   <!-- NAVBAR -->
-  <header class="sticky top-0 z-30 bg-cura-primaryDark text-white border-b border-cura-accent/40 shadow-sm">
-    <div class="max-w-5xl mx-auto px-4 py-3 flex items-center justify-between gap-4">
-      <!-- Logo / Marca -->
-<img src="/logo.png"
-     alt="Logo C.U.R.A."
-     class="w-9 h-9 object-contain shrink-0" />
+<header class="sticky top-0 z-30 bg-cura-primaryDark text-white border-b border-cura-accent/40 shadow-sm">
+  <div class="max-w-5xl mx-auto px-4 py-3 flex items-center justify-between gap-4">
+    
+    <!-- Logo + texto -->
+    <div class="flex items-center gap-2">
+      <img src="/logo.png"
+           alt="Logo C.U.R.A."
+           class="h-10 w-auto object-contain shrink-0" />
 
-
-
-        <div class="leading-tight">
-          <p class="text-[11px] uppercase tracking-[0.25em] text-cura-accentLight">LEY NACIONAL</p>
-          <p class="text-sm font-bold text-white">Transformación Digital Sanitaria Argentina</p>
-        </div>
+      <div class="leading-tight">
+        <p class="text-[11px] uppercase tracking-[0.25em] text-cura-accentLight">LEY NACIONAL</p>
+        <p class="text-sm font-bold text-white">Transformación Digital Sanitaria Argentina</p>
       </div>
-
-      <!-- Menú simple -->
-      <nav class="hidden sm:flex items-center gap-5 text-sm font-medium">
-        <a href="#inicio" class="text-cura-accentLight hover:text-white">Inicio</a>
-        <a href="#informacion" class="text-cura-accentLight hover:text-white">Información</a>
-        <a href="#contacto" class="text-cura-accentLight hover:text-white">Contacto</a>
-        <a href="https://cura-chi.vercel.app" target="_blank"
-           class="inline-flex items-center gap-1 text-cura-primary bg-cura-accent rounded-full px-3 py-1 text-xs font-semibold hover:bg-white transition">
-          Demo QR Nivel 2
-        </a>
-      </nav>
     </div>
-  </header>
+
+    <!-- Menú simple -->
+    <nav class="hidden sm:flex items-center gap-5 text-sm font-medium">
+      <a href="#inicio" class="text-cura-accentLight hover:text-white">Inicio</a>
+      <a href="#informacion" class="text-cura-accentLight hover:text-white">Información</a>
+      <a href="#contacto" class="text-cura-accentLight hover:text-white">Contacto</a>
+      <a href="https://cura-chi.vercel.app" target="_blank"
+         class="inline-flex items-center gap-1 text-cura-primary bg-cura-accent rounded-full px-3 py-1 text-xs font-semibold hover:bg-white transition">
+        Demo QR Nivel 2
+      </a>
+    </nav>
+
+  </div>
+</header>
+
 
   <!-- CONTENIDO PRINCIPAL -->
   <main id="inicio" class="max-w-5xl mx-auto px-4 pt-10 pb-16 space-y-16">
@@ -276,6 +278,7 @@
 
 </body>
 </html>
+
 
 
 
