--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <a href="#inicio" class="text-cura-accentLight hover:text-white">Inicio</a>
       <a href="#informacion" class="text-cura-accentLight hover:text-white">Información</a>
       <a href="#contacto" class="text-cura-accentLight hover:text-white">Contacto</a>
-      <a href="https://cura-chi.vercel.app" target="_blank"
+      <a href="/demonivel2.html"
          class="inline-flex items-center gap-1 text-cura-primary bg-cura-accent rounded-full px-3 py-1 text-xs font-semibold hover:bg-white transition">
         Demo QR Nivel 2
       </a>
@@ -278,6 +278,7 @@
 
 </body>
 </html>
+
 
 
 
