--- a/index.html
+++ b/index.html
@@ -112,16 +112,24 @@
             SISTEMA C.U.R.A.
           </p>
           <p class="text-sm text-white">
-            Una credencial digital única para cada ciudadano, interoperable entre todos los subsectores de salud, permitiendo que la información esté siempre disponible donde y cuando se la necesite. Es la unificación Nacional de la Historia Clinica, no más papeles ni estudios repetidos, toda tu información médica en un sólo lugar. 
+            Una credencial digital única y segura que unifica toda la información médica de cada persona. La Historia Clínica deja de estar dispersa: acompaña al paciente a cualquier lugar, en cualquier momento y en cualquier institución del país. Fin del papeleo, los trámites repetidos, los estudios duplicados y la burocracia que frena la atención.
+          </p>
+          <p class="text-sm text-white">
+           Beneficios clave para las personas:
           </p>
           <ul class="text-sm text-cura-accentLight space-y-1">
-            <li>• Acceso seguro y segmentado para pacientes, enfermería y médicos.</li>
-            <li>• Integración con historias clínicas electrónicas y receta digital.</li>
-            <li>• Alineada a estándares internacionales de interoperabilidad.</li>
-            <li>• Reforma del PAMI: Llega la mejora necesaria para que todos sus pacientes dejen de sufrir la burocracia y sea todo mucho más ágil y fácil, sin demoras. Traslados automaticos en turnos para personas con movilidad reducida.</li>
+            <li>• Acceso inmediato a su información médica desde cualquier centro de salud, público o privado del país, y en centros del exterior que utilicen estándares internacionales compatibles.</li>
+            <li>• Eliminación total del papel: órdenes, recetas, troqueles, certificados y estudios pasan a formato digital.</li>
+            <li>• Recetas electrónicas firmadas automáticamente: sin volver al médico solo para renovar o firmar.</li>
+            <li>• Integración real con ambulancias, guardias y emergencias: al escanear el QR, se accede solo a lo necesario según el rol (ciudadano, enfermero o médico).</li>
+            <li>• Facilita turnos rápidos, continuidad de tratamientos y evita repetir análisis o contar todo desde cero cada vez.</li>
+            <li>• Mejoras directas para PAMI: menos trámites, más velocidad, reducción de burocracia y automatización de traslados para personas con movilidad reducida.</li>
+             <li>• Seguridad avanzada y segmentación de datos: cada profesional ve únicamente lo que necesita para atender al paciente.</li>
+             <li>• Reduce costos del sistema completo: menos papeles, menos errores, menos pérdida de información y más eficiencia.</li>
           </ul>
           <div class="pt-2 border-t border-cura-accent/30 flex items-center justify-between">
             <span class="text-[11px] text-cura-accentLight">Proyecto ciudadano, sin fines de lucro.</span>
+                        <span class="text-[11px] text-cura-accentLight">Presentado según Art. 39 de la Constitución Nacional y Ley 24.747.</span>
             <span class="text-[11px] text-white font-semibold">#LeyCURA</span>
           </div>
         </div>
@@ -278,6 +286,7 @@
 
 </body>
 </html>
+
 
 
 
