--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@
              <li>• Reduce costos del sistema completo: menos papeles, menos errores, menos pérdida de información y más eficiencia.</li>
           </ul>
           <div class="pt-2 border-t border-cura-accent/30 flex items-center justify-between">
-            <span class="text-[11px] text-cura-accentLight">Proyecto ciudadano, sin fines de lucro.</span>
-                        <span class="text-[11px] text-cura-accentLight">Presentado según Art. 39 de la Constitución Nacional y Ley 24.747.</span>
+            <span class="text-[11px] text-cura-accentLight">Proyecto ciudadano presentado según Art. 39 de la Constitución Nacional y Ley 24.747., sin fines de lucro.</span>
             <span class="text-[11px] text-white font-semibold">#LeyCURA</span>
           </div>
         </div>
@@ -286,6 +285,7 @@
 
 </body>
 </html>
+
 
 
 
