--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <main id="inicio" class="max-w-5xl mx-auto px-4 pt-10 pb-16 space-y-16">
 
     <!-- HERO -->
-    <section class="grid md:grid-cols-2 gap-10 items-center">
+<section class="grid md:grid-cols-2 gap-10 items-start">
       <div>
         <p class="text-xs font-semibold tracking-[0.25em] text-cura-accentLight uppercase mb-3">
           LEY C.U.R.A.
@@ -285,6 +285,7 @@
 
 </body>
 </html>
+
 
 
 
