--- a/index.html
+++ b/index.html
@@ -172,6 +172,61 @@
           </p>
         </div>
       </div>
+  <!-- Card 4 -->
+      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+  <h3 class="text-sm font-semibold text-white mb-1">Fin del papeleo</h3>
+  <p class="text-xs text-cura-accentLight">
+    Órdenes, certificados, estudios y trámites pasan a digital, evitando sellos, fotocopias y formularios repetidos.
+  </p>
+</div>
+
+        <!-- Card 5 -->
+      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+  <h3 class="text-sm font-semibold text-white mb-1">PAMI sin burocracia</h3>
+  <p class="text-xs text-cura-accentLight">
+    Turnos más ágiles, menos trámites presenciales y automatización de traslados para personas con movilidad reducida.
+  </p>
+</div>
+
+        <!-- Card 6 -->
+      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+  <h3 class="text-sm font-semibold text-white mb-1">Mejor atención en emergencias</h3>
+  <p class="text-xs text-cura-accentLight">
+    El QR permite identificar a la persona y acceder a datos críticos como alergias y medicación en segundos.
+  </p>
+</div>
+ <!-- Card 7 -->
+      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+  <h3 class="text-sm font-semibold text-white mb-1">Más tiempo para el paciente</h3>
+  <p class="text-xs text-cura-accentLight">
+    Al reducir papeles y carga administrativa, los profesionales pueden dedicar más tiempo a atender y escuchar.
+  </p>
+</div>
+
+       <!-- Card 8 -->
+<div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+  <h3 class="text-sm font-semibold text-white mb-1">Turnos sin vueltas</h3>
+  <p class="text-xs text-cura-accentLight">
+    Agenda integrada entre hospitales, clínicas y obras sociales para reducir tiempos de espera.
+  </p>
+</div>
+
+             <!-- Card 9 -->
+<div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+  <h3 class="text-sm font-semibold text-white mb-1">Ahorro para todo el sistema</h3>
+  <p class="text-xs text-cura-accentLight">
+    Menos errores, menos pérdidas de información y menos costos administrativos que se reinvierten en salud.
+  </p>
+</div>
+ <!-- Card 10 -->
+      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+  <h3 class="text-sm font-semibold text-white mb-1">Evita estudios repetidos</h3>
+  <p class="text-xs text-cura-accentLight">
+    Los médicos ven los estudios anteriores y resultados al instante, sin repetir análisis innecesarios.
+  </p>
+</div>
+
+      
     </section>
 
     <!-- CONTACTO -->
@@ -285,6 +340,7 @@
 
 </body>
 </html>
+
 
 
 
