--- a/index.html
+++ b/index.html
@@ -147,84 +147,106 @@
         </p>
       </div>
 
-      <div class="grid md:grid-cols-3 gap-4">
-        <!-- Card 1 -->
-        <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
-          <h3 class="text-sm font-semibold text-white mb-1">Unificación</h3>
-          <p class="text-xs text-cura-accentLight">
-            Un solo identificador de salud por persona, integrando datos de hospitales públicos, privados y de la seguridad social.
-          </p>
-        </div>
+ <div class="grid md:grid-cols-3 gap-4">
 
-        <!-- Card 2 -->
-        <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
-          <h3 class="text-sm font-semibold text-white mb-1">Seguridad y privacidad</h3>
-          <p class="text-xs text-cura-accentLight">
-            Accesos por niveles, registros de auditoría y respeto a la confidencialidad de los datos de cada paciente.
-          </p>
-        </div>
+  <!-- 1 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Unificación</h3>
+    <p class="text-xs text-cura-accentLight">
+      Un solo identificador de salud por persona, integrando datos de hospitales públicos, privados y de la seguridad social.
+    </p>
+  </div>
 
-        <!-- Card 3 -->
-        <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
-          <h3 class="text-sm font-semibold text-white mb-1">Interoperabilidad</h3>
-          <p class="text-xs text-cura-accentLight">
-            Basada en estándares internacionales de salud digital para que los sistemas “hablen el mismo idioma”.
-          </p>
-        </div>
-      </div>
-  <!-- Card 4 -->
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
-  <h3 class="text-sm font-semibold text-white mb-1">Fin del papeleo</h3>
-  <p class="text-xs text-cura-accentLight">
-    Órdenes, certificados, estudios y trámites pasan a digital, evitando sellos, fotocopias y formularios repetidos.
-  </p>
+  <!-- 2 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Seguridad y privacidad</h3>
+    <p class="text-xs text-cura-accentLight">
+      Accesos por niveles, auditorías y confidencialidad estricta de los datos de cada paciente.
+    </p>
+  </div>
+
+  <!-- 3 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Interoperabilidad</h3>
+    <p class="text-xs text-cura-accentLight">
+      Basada en estándares internacionales para que todos los sistemas “hablen el mismo idioma”.
+    </p>
+  </div>
+
+  <!-- 4 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Fin del papeleo</h3>
+    <p class="text-xs text-cura-accentLight">
+      Órdenes, estudios y certificados pasan a digital, evitando pérdidas, sellos y trámites repetidos.
+    </p>
+  </div>
+
+  <!-- 5 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Recetas automáticas</h3>
+    <p class="text-xs text-cura-accentLight">
+      Firmas digitales automáticas: no hace falta volver al consultorio para renovar o validar recetas.
+    </p>
+  </div>
+
+  <!-- 6 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">PAMI sin burocracia</h3>
+    <p class="text-xs text-cura-accentLight">
+      Turnos ágiles, menos trámites presenciales y traslados automatizados para movilidad reducida.
+    </p>
+  </div>
+
+  <!-- 7 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Mejor atención en emergencias</h3>
+    <p class="text-xs text-cura-accentLight">
+      El QR permite identificar a la persona y ver alergias y medicación en segundos.
+    </p>
+  </div>
+
+  <!-- 8 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Evita estudios repetidos</h3>
+    <p class="text-xs text-cura-accentLight">
+      Los médicos ven estudios previos al instante, evitando repetir análisis innecesarios.
+    </p>
+  </div>
+
+  <!-- 9 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Más tiempo para el paciente</h3>
+    <p class="text-xs text-cura-accentLight">
+      Menos carga administrativa, más tiempo real de atención y acompañamiento.
+    </p>
+  </div>
+
+  <!-- 10 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Turnos sin vueltas</h3>
+    <p class="text-xs text-cura-accentLight">
+      Agenda integrada para reducir esperas entre hospitales, clínicas y obras sociales.
+    </p>
+  </div>
+
+  <!-- 11 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Ahorro para todo el sistema</h3>
+    <p class="text-xs text-cura-accentLight">
+      Menos errores, menos pérdidas y menos costos administrativos que se reinvierten en salud.
+    </p>
+  </div>
+
+  <!-- 12 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Información en el país y exterior</h3>
+    <p class="text-xs text-cura-accentLight">
+      Disponible en todo el país y en instituciones del exterior que usen estándares compatibles.
+    </p>
+  </div>
+
 </div>
 
-        <!-- Card 5 -->
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
-  <h3 class="text-sm font-semibold text-white mb-1">PAMI sin burocracia</h3>
-  <p class="text-xs text-cura-accentLight">
-    Turnos más ágiles, menos trámites presenciales y automatización de traslados para personas con movilidad reducida.
-  </p>
-</div>
-
-        <!-- Card 6 -->
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
-  <h3 class="text-sm font-semibold text-white mb-1">Mejor atención en emergencias</h3>
-  <p class="text-xs text-cura-accentLight">
-    El QR permite identificar a la persona y acceder a datos críticos como alergias y medicación en segundos.
-  </p>
-</div>
- <!-- Card 7 -->
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
-  <h3 class="text-sm font-semibold text-white mb-1">Más tiempo para el paciente</h3>
-  <p class="text-xs text-cura-accentLight">
-    Al reducir papeles y carga administrativa, los profesionales pueden dedicar más tiempo a atender y escuchar.
-  </p>
-</div>
-
-       <!-- Card 8 -->
-<div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
-  <h3 class="text-sm font-semibold text-white mb-1">Turnos sin vueltas</h3>
-  <p class="text-xs text-cura-accentLight">
-    Agenda integrada entre hospitales, clínicas y obras sociales para reducir tiempos de espera.
-  </p>
-</div>
-
-             <!-- Card 9 -->
-<div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
-  <h3 class="text-sm font-semibold text-white mb-1">Ahorro para todo el sistema</h3>
-  <p class="text-xs text-cura-accentLight">
-    Menos errores, menos pérdidas de información y menos costos administrativos que se reinvierten en salud.
-  </p>
-</div>
- <!-- Card 10 -->
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
-  <h3 class="text-sm font-semibold text-white mb-1">Evita estudios repetidos</h3>
-  <p class="text-xs text-cura-accentLight">
-    Los médicos ven los estudios anteriores y resultados al instante, sin repetir análisis innecesarios.
-  </p>
-</div>
 
       
     </section>
@@ -340,6 +362,7 @@
 
 </body>
 </html>
+
 
 
 
