--- a/index.html
+++ b/index.html
@@ -102,38 +102,67 @@
         </p>
       </div>
 
-      <!-- Tarjeta SISTEMA C.U.R.A. estilo llavero -->
-      <div class="relative">
-        <div class="absolute -top-6 -right-4 w-28 h-28 rounded-full bg-cura-accent/25 blur-2xl"></div>
-        <div class="absolute -bottom-8 -left-4 w-28 h-28 rounded-full bg-cura-primaryDark/50 blur-2xl"></div>
+     <!-- Tarjeta SISTEMA C.U.R.A. estilo llavero -->
+<div class="relative">
+  <div class="absolute -top-6 -right-4 w-28 h-28 rounded-full bg-cura-accent/25 blur-2xl"></div>
+  <div class="absolute -bottom-8 -left-4 w-28 h-28 rounded-full bg-cura-primaryDark/50 blur-2xl"></div>
 
-        <div class="relative bg-cura-card border border-cura-accent/40 rounded-2xl shadow-xl p-5 space-y-4">
-          <p class="text-xs font-semibold text-cura-accentLight uppercase tracking-wide">
-            SISTEMA C.U.R.A.
-          </p>
-          <p class="text-sm text-white">
-            Una credencial digital única y segura que unifica toda la información médica de cada persona. La Historia Clínica deja de estar dispersa: acompaña al paciente a cualquier lugar, en cualquier momento y en cualquier institución del país. Fin del papeleo, los trámites repetidos, los estudios duplicados y la burocracia que frena la atención.
-          </p>
-          <p class="text-sm text-white">
-           Beneficios clave para las personas:
-          </p>
-          <ul class="text-sm text-cura-accentLight space-y-1">
-            <li>• Acceso inmediato a su información médica desde cualquier centro de salud, público o privado del país, y en centros del exterior que utilicen estándares internacionales compatibles.</li>
-            <li>• Eliminación total del papel: órdenes, recetas, troqueles, certificados y estudios pasan a formato digital.</li>
-            <li>• Recetas electrónicas firmadas automáticamente: sin volver al médico solo para renovar o firmar.</li>
-            <li>• Integración real con ambulancias, guardias y emergencias: al escanear el QR, se accede solo a lo necesario según el rol (ciudadano, enfermero o médico).</li>
-            <li>• Facilita turnos rápidos, continuidad de tratamientos y evita repetir análisis o contar todo desde cero cada vez.</li>
-            <li>• Mejoras directas para PAMI: menos trámites, más velocidad, reducción de burocracia y automatización de traslados para personas con movilidad reducida.</li>
-             <li>• Seguridad avanzada y segmentación de datos: cada profesional ve únicamente lo que necesita para atender al paciente.</li>
-             <li>• Reduce costos del sistema completo: menos papeles, menos errores, menos pérdida de información y más eficiencia.</li>
-          </ul>
-          <div class="pt-2 border-t border-cura-accent/30 flex items-center justify-between">
-            <span class="text-[11px] text-cura-accentLight">Proyecto ciudadano presentado según Art. 39 de la Constitución Nacional y Ley 24.747., sin fines de lucro.</span>
-            <span class="text-[11px] text-white font-semibold">#LeyCURA</span>
-          </div>
-        </div>
+  <div class="relative bg-cura-card border border-cura-accent/40 rounded-2xl shadow-xl p-5 space-y-4">
+    <p class="text-xs font-semibold text-cura-accentLight uppercase tracking-wide">
+      SISTEMA C.U.R.A.
+    </p>
+
+    <p class="text-sm text-white">
+      Una credencial digital única y segura que unifica toda la información médica de cada persona. La Historia Clínica deja de estar dispersa: acompaña al paciente a cualquier lugar, en cualquier momento y en cualquier institución del país. Fin del papeleo, los trámites repetidos, los estudios duplicados y la burocracia que frena la atención.
+    </p>
+
+    <p class="text-sm text-white">
+      Beneficios clave para las personas:
+    </p>
+
+    <!-- BENEFICIOS EN RECTÁNGULOS -->
+    <div class="space-y-2 text-xs text-cura-accentLight">
+      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+        Acceso inmediato a su información médica desde cualquier centro de salud, público o privado del país, y en centros del exterior que utilicen estándares internacionales compatibles.
       </div>
-    </section>
+
+      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+        Eliminación total del papel: órdenes, recetas, troqueles, certificados y estudios pasan a formato digital.
+      </div>
+
+      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+        Recetas electrónicas firmadas automáticamente: sin volver al médico solo para renovar o firmar.
+      </div>
+
+      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+        Integración real con ambulancias, guardias y emergencias: al escanear el QR, se accede solo a lo necesario según el rol (ciudadano, enfermero o médico).
+      </div>
+
+      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+        Facilita turnos rápidos, continuidad de tratamientos y evita repetir análisis o contar todo desde cero cada vez.
+      </div>
+
+      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+        Mejoras directas para PAMI: menos trámites, más velocidad, reducción de burocracia y automatización de traslados para personas con movilidad reducida.
+      </div>
+
+      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+        Seguridad avanzada y segmentación de datos: cada profesional ve únicamente lo que necesita para atender al paciente.
+      </div>
+
+      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+        Reduce costos del sistema completo: menos papeles, menos errores, menos pérdida de información y más eficiencia.
+      </div>
+    </div>
+
+    <div class="pt-2 border-t border-cura-accent/30 flex items-center justify-between">
+      <span class="text-[11px] text-cura-accentLight">
+        Proyecto ciudadano presentado según Art. 39 de la Constitución Nacional y Ley 24.747., sin fines de lucro.
+      </span>
+      <span class="text-[11px] text-white font-semibold">#LeyCURA</span>
+    </div>
+  </div>
+</div>
 
     <!-- BLOQUE: CREADA PARA MEJORAR... -->
     <section id="informacion" class="space-y-6">
@@ -362,6 +391,7 @@
 
 </body>
 </html>
+
 
 
 
