--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             SISTEMA C.U.R.A.
           </p>
           <p class="text-sm text-white">
-            Una credencial digital única y segura que unifica toda la información médica de cada persona. La Historia Clínica deja de estar dispersa: acompaña al paciente a cualquier lugar, en cualquier momento y en cualquier institución del país. Fin del papeleo, los trámites repetidos, los estudios duplicados y la burocracia que frena la atención.
+            Una credencial digital única y segura que unifica toda la información médica de cada persona. La Historia Clínica deja de estar dispersa: acompaña al paciente a cualquier lugar, en cualquier momento y en cualquier institución del país. 
           </p>
           <p class="text-sm text-white">
            Beneficios clave para las personas:
