--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <!-- NAVBAR -->
 <header class="sticky top-0 z-30 bg-cura-primaryDark text-white border-b border-cura-accent/40 shadow-sm">
   <div class="max-w-5xl mx-auto px-4 py-3 flex items-center justify-between gap-4">
-    
+
     <!-- Logo + texto -->
     <div class="flex items-center gap-2">
       <img src="/logo.png"
@@ -122,37 +122,68 @@
         </p>
       </div>
 
-      <!-- Tarjeta SISTEMA C.U.R.A. estilo llavero -->
-      <div class="relative">
-        <div class="absolute -top-6 -right-4 w-28 h-28 rounded-full bg-cura-accent/25 blur-2xl"></div>
-        <div class="absolute -bottom-8 -left-4 w-28 h-28 rounded-full bg-cura-primaryDark/50 blur-2xl"></div>
+     <!-- Tarjeta SISTEMA C.U.R.A. estilo llavero -->
+<div class="relative">
+  <div class="absolute -top-6 -right-4 w-28 h-28 rounded-full bg-cura-accent/25 blur-2xl"></div>
+  <div class="absolute -bottom-8 -left-4 w-28 h-28 rounded-full bg-cura-primaryDark/50 blur-2xl"></div>
 
-        <div class="relative bg-cura-card border border-cura-accent/40 rounded-2xl shadow-xl p-5 space-y-4">
-          <p class="text-xs font-semibold text-cura-accentLight uppercase tracking-wide">
-            SISTEMA C.U.R.A.
-          </p>
-          <p class="text-sm text-white">
-            Una credencial digital única y segura que unifica toda la información médica de cada persona. La Historia Clínica deja de estar dispersa: acompaña al paciente a cualquier lugar, en cualquier momento y en cualquier institución del país. 
-          </p>
-          <p class="text-sm text-white">
-           Beneficios clave para las personas:
-          </p>
-          <ul class="text-sm text-cura-accentLight space-y-1">
-            <li>• Acceso inmediato a su información médica desde cualquier centro de salud, público o privado del país, y en centros del exterior que utilicen estándares internacionales compatibles.</li>
-            <li>• Eliminación total del papel: órdenes, recetas, troqueles, certificados y estudios pasan a formato digital.</li>
-            <li>• Recetas electrónicas firmadas automáticamente: sin volver al médico solo para renovar o firmar.</li>
-            <li>• Integración real con ambulancias, guardias y emergencias: al escanear el QR, se accede solo a lo necesario según el rol (ciudadano, enfermero o médico).</li>
-            <li>• Facilita turnos rápidos, continuidad de tratamientos y evita repetir análisis o contar todo desde cero cada vez.</li>
-            <li>• Mejoras directas para PAMI: menos trámites, más velocidad, reducción de burocracia y automatización de traslados para personas con movilidad reducida.</li>
-             <li>• Seguridad avanzada y segmentación de datos: cada profesional ve únicamente lo que necesita para atender al paciente.</li>
-             <li>• Reduce costos del sistema completo: menos papeles, menos errores, menos pérdida de información y más eficiencia.</li>
-          </ul>
-          <div class="pt-2 border-t border-cura-accent/30 flex items-center justify-between">
-            <span class="text-[11px] text-cura-accentLight">Proyecto ciudadano presentado según Art. 39 de la Constitución Nacional y Ley 24.747., sin fines de lucro.</span>
-            <span class="text-[11px] text-white font-semibold">#LeyCURA</span>
-          </div>
-        </div>
+  <div class="relative bg-cura-card border border-cura-accent/40 rounded-2xl shadow-xl p-5 space-y-4">
+    <p class="text-xs font-semibold text-cura-accentLight uppercase tracking-wide">
+      SISTEMA C.U.R.A.
+    </p>
+
+    <p class="text-sm text-white">
+      Una credencial digital única y segura que unifica toda la información médica de cada persona. La Historia Clínica deja de estar dispersa: acompaña al paciente a cualquier lugar, en cualquier momento y en cualquier institución del país. Fin del papeleo, los trámites repetidos, los estudios duplicados y la burocracia que frena la atención.
+    </p>
+
+    <p class="text-sm text-white">
+      Beneficios clave para las personas:
+    </p>
+
+    <!-- BENEFICIOS EN RECTÁNGULOS -->
+    <div class="space-y-2 text-xs text-cura-accentLight">
+      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+        Acceso inmediato a su información médica desde cualquier centro de salud, público o privado del país, y en centros del exterior que utilicen estándares internacionales compatibles.
       </div>
+
+      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+        Eliminación total del papel: órdenes, recetas, troqueles, certificados y estudios pasan a formato digital.
+      </div>
+
+      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+        Recetas electrónicas firmadas automáticamente: sin volver al médico solo para renovar o firmar.
+      </div>
+
+      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+        Integración real con ambulancias, guardias y emergencias: al escanear el QR, se accede solo a lo necesario según el rol (ciudadano, enfermero o médico).
+      </div>
+
+      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+        Facilita turnos rápidos, continuidad de tratamientos y evita repetir análisis o contar todo desde cero cada vez.
+      </div>
+
+      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+        Mejoras directas para PAMI: menos trámites, más velocidad, reducción de burocracia y automatización de traslados para personas con movilidad reducida.
+      </div>
+
+      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+        Seguridad avanzada y segmentación de datos: cada profesional ve únicamente lo que necesita para atender al paciente.
+      </div>
+
+      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+        Reduce costos del sistema completo: menos papeles, menos errores, menos pérdida de información y más eficiencia.
+      </div>
+    </div>
+
+    <div class="pt-2 border-t border-cura-accent/30 flex items-center justify-between">
+      <span class="text-[11px] text-cura-accentLight">
+        Proyecto ciudadano presentado según Art. 39 de la Constitución Nacional y Ley 24.747., sin fines de lucro.
+      </span>
+      <span class="text-[11px] text-white font-semibold">#LeyCURA</span>
+    </div>
+  </div>
+</div>
+
     </section>
 
     <!-- BLOQUE: CREADA PARA MEJORAR... -->
@@ -167,86 +198,108 @@
         </p>
       </div>
 
-      <div class="grid md:grid-cols-3 gap-4">
-        <!-- Card 1 -->
-        <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
-          <h3 class="text-sm font-semibold text-white mb-1">Unificación</h3>
-          <p class="text-xs text-cura-accentLight">
-            Un solo identificador de salud por persona, integrando datos de hospitales públicos, privados y de la seguridad social.
-          </p>
-        </div>
+ <div class="grid md:grid-cols-3 gap-4">
 
-        <!-- Card 2 -->
-        <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
-          <h3 class="text-sm font-semibold text-white mb-1">Seguridad y privacidad</h3>
-          <p class="text-xs text-cura-accentLight">
-            Accesos por niveles, registros de auditoría y respeto a la confidencialidad de los datos de cada paciente.
-          </p>
-        </div>
+  <!-- 1 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Unificación</h3>
+    <p class="text-xs text-cura-accentLight">
+      Un solo identificador de salud por persona, integrando datos de hospitales públicos, privados y de la seguridad social.
+    </p>
+  </div>
 
-        <!-- Card 3 -->
-        <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
-          <h3 class="text-sm font-semibold text-white mb-1">Interoperabilidad</h3>
-          <p class="text-xs text-cura-accentLight">
-            Basada en estándares internacionales de salud digital para que los sistemas “hablen el mismo idioma”.
-          </p>
-        </div>
-      </div>
-  <!-- Card 4 -->
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
-  <h3 class="text-sm font-semibold text-white mb-1">Fin del papeleo</h3>
-  <p class="text-xs text-cura-accentLight">
-    Órdenes, certificados, estudios y trámites pasan a digital, evitando sellos, fotocopias y formularios repetidos.
-  </p>
+  <!-- 2 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Seguridad y privacidad</h3>
+    <p class="text-xs text-cura-accentLight">
+      Accesos por niveles, auditorías y confidencialidad estricta de los datos de cada paciente.
+    </p>
+  </div>
+
+  <!-- 3 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Interoperabilidad</h3>
+    <p class="text-xs text-cura-accentLight">
+      Basada en estándares internacionales para que todos los sistemas “hablen el mismo idioma”.
+    </p>
+  </div>
+
+  <!-- 4 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Fin del papeleo</h3>
+    <p class="text-xs text-cura-accentLight">
+      Órdenes, estudios y certificados pasan a digital, evitando pérdidas, sellos y trámites repetidos.
+    </p>
+  </div>
+
+  <!-- 5 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Recetas automáticas</h3>
+    <p class="text-xs text-cura-accentLight">
+      Firmas digitales automáticas: no hace falta volver al consultorio para renovar o validar recetas.
+    </p>
+  </div>
+
+  <!-- 6 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">PAMI sin burocracia</h3>
+    <p class="text-xs text-cura-accentLight">
+      Turnos ágiles, menos trámites presenciales y traslados automatizados para movilidad reducida.
+    </p>
+  </div>
+
+  <!-- 7 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Mejor atención en emergencias</h3>
+    <p class="text-xs text-cura-accentLight">
+      El QR permite identificar a la persona y ver alergias y medicación en segundos.
+    </p>
+  </div>
+
+  <!-- 8 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Evita estudios repetidos</h3>
+    <p class="text-xs text-cura-accentLight">
+      Los médicos ven estudios previos al instante, evitando repetir análisis innecesarios.
+    </p>
+  </div>
+
+  <!-- 9 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Más tiempo para el paciente</h3>
+    <p class="text-xs text-cura-accentLight">
+      Menos carga administrativa, más tiempo real de atención y acompañamiento.
+    </p>
+  </div>
+
+  <!-- 10 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Turnos sin vueltas</h3>
+    <p class="text-xs text-cura-accentLight">
+      Agenda integrada para reducir esperas entre hospitales, clínicas y obras sociales.
+    </p>
+  </div>
+
+  <!-- 11 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Ahorro para todo el sistema</h3>
+    <p class="text-xs text-cura-accentLight">
+      Menos errores, menos pérdidas y menos costos administrativos que se reinvierten en salud.
+    </p>
+  </div>
+
+  <!-- 12 -->
+  <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+    <h3 class="text-sm font-semibold text-white mb-1">Información en el país y exterior</h3>
+    <p class="text-xs text-cura-accentLight">
+      Disponible en todo el país y en instituciones del exterior que usen estándares compatibles.
+    </p>
+  </div>
+
 </div>
 
-        <!-- Card 5 -->
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
-  <h3 class="text-sm font-semibold text-white mb-1">PAMI sin burocracia</h3>
-  <p class="text-xs text-cura-accentLight">
-    Turnos más ágiles, menos trámites presenciales y automatización de traslados para personas con movilidad reducida.
-  </p>
-</div>
 
-        <!-- Card 6 -->
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
-  <h3 class="text-sm font-semibold text-white mb-1">Mejor atención en emergencias</h3>
-  <p class="text-xs text-cura-accentLight">
-    El QR permite identificar a la persona y acceder a datos críticos como alergias y medicación en segundos.
-  </p>
-</div>
- <!-- Card 7 -->
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
-  <h3 class="text-sm font-semibold text-white mb-1">Más tiempo para el paciente</h3>
-  <p class="text-xs text-cura-accentLight">
-    Al reducir papeles y carga administrativa, los profesionales pueden dedicar más tiempo a atender y escuchar.
-  </p>
-</div>
 
-       <!-- Card 8 -->
-<div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
-  <h3 class="text-sm font-semibold text-white mb-1">Turnos sin vueltas</h3>
-  <p class="text-xs text-cura-accentLight">
-    Agenda integrada entre hospitales, clínicas y obras sociales para reducir tiempos de espera.
-  </p>
-</div>
-
-             <!-- Card 9 -->
-<div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
-  <h3 class="text-sm font-semibold text-white mb-1">Ahorro para todo el sistema</h3>
-  <p class="text-xs text-cura-accentLight">
-    Menos errores, menos pérdidas de información y menos costos administrativos que se reinvierten en salud.
-  </p>
-</div>
- <!-- Card 10 -->
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
-  <h3 class="text-sm font-semibold text-white mb-1">Evita estudios repetidos</h3>
-  <p class="text-xs text-cura-accentLight">
-    Los médicos ven los estudios anteriores y resultados al instante, sin repetir análisis innecesarios.
-  </p>
-</div>
-
-      
     </section>
 
     <!-- CONTACTO -->
@@ -279,38 +332,41 @@
 
         <!-- Formulario (estático) -->
         <form id="contact-form"
-      action="https://formsubmit.co/ajax/contacto@leycura.org"
-      method="POST"
-      class="bg-cura-card border border-cura-accent/40 rounded-xl p-4 shadow-md space-y-3">
+        action="https://formsubmit.co/ajax/contacto@leycura.org"
+        method="POST"
+        class="bg-cura-card border border-cura-accent/40 rounded-xl p-4 shadow-md space-y-3">
 
-  <input type="hidden" name="_subject" value="Nuevo mensaje desde leycura.org">
-  <input type="hidden" name="_template" value="box">
-  <input type="hidden" name="_captcha" value="false">
+          <input type="hidden" name="_subject" value="Nuevo mensaje desde leycura.org">
+          <input type="hidden" name="_template" value="box">
+          <input type="hidden" name="_captcha" value="false">
 
-  <div>
-    <label class="block text-xs font-medium text-cura-accentLight mb-1">Nombre</label>
-    <input type="text" name="nombre" required
-           class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary focus:outline-none focus:ring-1 focus:ring-cura-accent focus:border-cura-accent" />
-  </div>
+          <div>
+            <label class="block text-xs font-medium text-cura-accentLight mb-1">Nombre</label>
+            <input type="text" name="nombre" required
+                   class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary focus:outline-none focus:ring-1 focus:ring-cura-accent focus:border-cura-accent" />
+          </div>
 
-  <div>
-    <label class="block text-xs font-medium text-cura-accentLight mb-1">Correo electrónico *</label>
-    <input type="email" name="email" required
-           class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary focus:outline-none focus:ring-1 focus:ring-cura-accent focus:border-cura-accent" />
-  </div>
+          <div>
+            <label class="block text-xs font-medium text-cura-accentLight mb-1">Correo electrónico *</label>
+            <input type="email" name="email" required
+                   class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary focus:outline-none focus:ring-1 focus:ring-cura-accent focus:border-cura-accent" />
+          </div>
 
-  <div>
-    <label class="block text-xs font-medium text-cura-accentLight mb-1">Mensaje</label>
-    <textarea rows="4" name="mensaje" required
-              class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary focus:outline-none focus:ring-1 focus:ring-cura-accent focus:border-cura-accent"></textarea>
-  </div>
+          <div>
+            <label class="block text-xs font-medium text-cura-accentLight mb-1">Mensaje</label>
+            <textarea rows="4" name="mensaje" required
+                      class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary focus:outline-none focus:ring-1 focus:ring-cura-accent focus:border-cura-accent"></textarea>
+          </div>
 
-  <button type="submit"
-          class="w-full inline-flex justify-center items-center px-3 py-2 rounded-md bg-white text-cura-primary text-sm font-semibold hover:bg-cura-accentLight hover:text-cura-primaryDark transition">
-    Enviar
-  </button>
+          <button type="submit"
+                  class="w-full inline-flex justify-center items-center px-3 py-2 rounded-md bg-white text-cura-primary text-sm font-semibold hover:bg-cura-accentLight hover:text-cura-primaryDark transition">
+            Enviar
+          </button>
 
-</form>
+          <p class="text-[10px] text-cura-accentLight mt-1">
+            Este formulario envía tu mensaje directamente al equipo de Ley C.U.R.A.
+          </p>
+        </form>
       </div>
     </section>
 
@@ -362,8 +418,6 @@
       </div>
     </div>
   </footer>
-
-
 
 
 <!-- MODAL ÉXITO FORMULARIO -->
@@ -453,19 +507,3 @@ document.addEventListener('DOMContentLoaded', function () {
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
