--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </p>
 
     <p class="text-sm text-white">
-      Una credencial digital única y segura que unifica toda la información médica de cada persona. La Historia Clínica deja de estar dispersa: acompaña al paciente a cualquier lugar, en cualquier momento y en cualquier institución del país. Fin del papeleo, los trámites repetidos, los estudios duplicados y la burocracia que frena la atención.
+      Una credencial digital única y segura que unifica toda la información médica de cada persona. La Historia Clínica deja de estar dispersa: acompaña al paciente a cualquier lugar, en cualquier momento y en cualquier institución del país.
     </p>
 
     <p class="text-sm text-white">
@@ -327,6 +327,9 @@
           </div>
           <div class="bg-cura-primaryDark border border-cura-accent/30 rounded-lg p-3 text-xs text-cura-accentLight">
             Esta iniciativa no solicita aportes económicos. Tu apoyo se basa en informarte, difundir y acompañar el proceso.
+          </div>
+             <div class="bg-cura-primaryDark border border-cura-accent/30 rounded-lg p-3 text-xs text-cura-accentLight">
+            Te necesitamos para hacer historia, solo con tu firma es que vamos a poder avanzar con el proyecto, sumate.
           </div>
         </div>
 
