--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             Esta iniciativa no solicita aportes económicos. Tu apoyo se basa en informarte, difundir y acompañar el proceso.
           </div>
             <div class="bg-cura-primaryDark border border-cura-accent/30 rounded-lg p-3 text-xs text-cura-accentLight">
-           Sólo con tu firma ....
+           Te necesitamos para hacer historia, solo con tu firma es que vamos a poder avanzar con el proyecto, sumate.
           </div>
         </div>
 
