--- a/index.html
+++ b/index.html
@@ -107,10 +107,11 @@
         </p>
 
         <div class="flex flex-wrap gap-3">
-          <a href="#sumate"
-             class="inline-flex items-center justify-center px-4 py-2.5 rounded-full bg-white text-cura-primary text-sm font-semibold shadow-sm hover:bg-cura-accentLight hover:text-cura-primaryDark transition">
-            QUIERO SUMARME
-          </a>
+    <a id="btn-sumate"
+   class="inline-flex items-center justify-center px-4 py-2.5 rounded-full bg-white text-cura-primary text-sm font-semibold shadow-sm hover:bg-cura-accentLight hover:text-cura-primaryDark transition">
+  QUIERO SUMARME
+</a>
+
           <a href="#informacion"
              class="inline-flex items-center justify-center px-4 py-2.5 rounded-full border border-cura-accent text-sm font-semibold text-cura-accentLight hover:bg-cura-accent hover:text-cura-primary transition">
             Obtén más información
